Java/user/1/err.txt
gjsghsj.c:1:1: error: unknown type name ‘ok’
 ok now  just check 
 ^
gjsghsj.c:1:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘just’
 ok now  just check 
         ^
gjsghsj.c:1:9: error: unknown type name ‘just’
